Versión 1 del Header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Esta es mi historia</title>
 </head>
 <body>
-    <h1>Esto es un título</h1>
-    <p>Este es un párrafo</p>
+    <header>
+        <section>
+            <h1>Esto es un título</h1>
+            <p>Este es un párrafo</p>
+        </section>
+    </header>
 </body>
 </html>
