Cabecera en su versión final

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <title>Esta es mi historia</title>
 </head>
 <body>
-    <header>
-        <section>
-            <h1>Esto es un título</h1>
-            <p>Este es un párrafo</p>
-        </section>
-    </header>
+    <main>
+        <nav>
+            <header>
+                <p>Cabecera &#x1F680 <span>Esta es mi cabecera</span></p>
+            </header>
+                <section>
+                    <h1>Esto es un título</h1>
+                    <p>Este es un párrafo</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ratione odit nulla, consequatur totam earum illo aliquid voluptas sint consectetur officia magni commodi, similique velit quibusdam cupiditate autem quis deleniti.</p>
+                </section>
+        </nav>
+    </main>
 </body>
 </html>
