Modifico el mensaje de mi cabecera

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <nav>
             <header>
-                <p>Cabecera &#x1F680 <span>Esta es mi cabecera</span></p>
+                <p>Cabecera &#x1F680 <span>Esta es mi HEADER</span></p>
             </header>
                 <section>
                     <h1>Esto es un título</h1>
